# screen

./: .gitignore  README.md  _yf_cache_v25.json  candidates_fixed_v2.csv  candidates_fixed_v2_1.csv  candidates_fixed_v2_2.csv  candidates_fixed_v2_3.csv  candidates_fixed_v2_4.csv  candidates_fixed_v2_5.csv  candidates_fixed_v2_6.csv  core_buyable_now_top30.csv  core_candidates.csv  core_pass_top30.csv  core_pass_top30_v2_1.csv  core_verified_top30_v2_5.csv  core_verified_top30_v2_6.csv  data_fill_queue_v2_4.csv  data_fill_queue_v2_5.csv  data_fill_queue_v2_6.csv  holdings_debug_fixed_v2.csv  holdings_debug_v2_1.csv  holdings_debug_v2_2.csv  holdings_debug_v2_3.csv  holdings_debug_v2_4.csv  holdings_debug_v2_5.csv  holdings_debug_v2_6.csv  holdings_debug_with_reasons.csv  index.html  kpi_summary.json  manual_dividend_check_queue.csv  manual_dividend_check_queue_v2_2.csv  manual_dividend_check_queue_v2_3.csv  manual_dividend_check_queue_v2_4.csv  manual_dividend_check_queue_v2_5.csv  manual_dividend_check_queue_v2_6.csv  manual_shares_check_queue_v2_4.csv  manual_shares_check_queue_v2_5.csv  manual_shares_check_queue_v2_6.csv  moomoo_watchlist.txt  patch_v2.py  (+13 more)
.github/workflows/: regenerate_report.yml  weekly_screen.yml
data/: holdings.csv
screen/: cli.py  config.py  report.py
screen/data/: cache.py  dividend_history.py  fundamentals.py  jquants_client.py  prices.py  universe.py
screen/features/: breakouts.py  fundamentals_metrics.py  technicals.py  (+1 more)
screening/: build_report.py  run_weekly.py
tests/: test_breakouts.py  test_e2e.py  test_rs.py  test_technicals.py
(+6 files in other folders)
